tests/fail/121-fail-unit-tuple-field.rs
use df_derive::ToDataFrame;
#[path = "../common.rs"]
mod core;

#[derive(ToDataFrame)]
struct WithUnit {
    nothing: (),
}

fn main() {}
